src/main/java/com/example/usersubscriptionservice/error/exception/SubscribeNotExistException.java
package com.example.usersubscriptionservice.error.exception;

public class SubscribeNotExistException extends RuntimeException {
    public SubscribeNotExistException(String message) {
        super(message);
    }
}
